--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ author: Morteza Nourelahi Alamdari
 tagline: GNU/Linux Software Developer
 description: >- # this means to ignore newlines until "baseurl:"
   GNU/Linux Software Developer
-baseurl: "/stage"
-url: "http://mortezana.com/stage"
+baseurl: "/"
+url: "http://mortezana.com"
 
 #twitter_username: mortezaipo
 #github_username:  mortezaipo
