--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   GNU/Linux Software Developer
 baseurl: ""
 url: "http://mortezana.com"
-
+permalink: /posts/:categories/:title/
 #twitter_username: mortezaipo
 #github_username:  mortezaipo
 
