--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ author: Morteza Nourelahi Alamdari
 tagline: GNU/Linux Software Developer
 description: >- # this means to ignore newlines until "baseurl:"
   GNU/Linux Software Developer
+keywords: ["programmer", "programming", "developer", "code", "source", "python", "linux", "gnu", "c", "c++", "tools"]
 baseurl: ""
 url: "http://mortezana.com"
 permalink: /posts/:categories/:title/
