--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: me@mortezana.com
 author: Morteza Nourelahi Alamdari
 tagline: GNU/Linux Software Developer
 description: >- # this means to ignore newlines until "baseurl:"
-  GNU/Linux Software Developer
+  Senior Software Developer
 keywords: ["programmer", "programming", "developer", "code", "source", "python", "linux", "gnu", "c", "c++", "tools"]
 baseurl: ""
 url: "http://mortezana.com"
