Add open graph meta tags. Update config and sidebar.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Morteza Nourelahi Alamdari
 email: me@mortezana.com
 author: Morteza Nourelahi Alamdari
-tagline: GNU/Linux Software Developer
+tagline: Senior Software Developer
 description: >- # this means to ignore newlines until "baseurl:"
   Senior Software Developer
 keywords: ["programmer", "programming", "developer", "code", "source", "python", "linux", "gnu", "c", "c++", "tools"]
